refactor(order): separate status transitions from side effects
* ORDER DOMAIN:
  - `OrderStatus.java`: Update enum to keep only pure transition rules.
  - `Order.java`: Move transition validation into the entity before changing order status.

* ORDER SERVICE:
  - `OrderService.java`: Publish order status changed events after command operations.
 Remove direct cart clearing and let cart react through order created events.
Split order creation helpers for product loading, validation, stock reduction, and promotion application.

* ORDER API:
  - `OrderController.java`: Use UserFacade for current-user queries instead of direct UserRepository access.

* GLOBAL EVENT:
  - `OrderStatusChangedEvent.java`: Add domain event for order status changes.
  - `OrderCreatedItemPayload.java`: Add separated item payload for order created events.
  - `OrderCancelledItemPayload.java`: Add separated item payload for order cancelled events.
  - `OrderCreatedEvent.java`: Update event to use separated item payload.
  - `OrderCancelledEvent.java`: Update event to use separated item payload.

* CART LISTENER:
  - `CartEventListener.java`: Handle order created events by cart id when available or by user id when order is created directly.